src/app.css
@import "tailwindcss";
 @plugin "daisyui" {
   themes: valentine --default, sunset --prefersdark;
 }

.icon-container svg {
  opacity: 1;
  fill: currentColor;
}

html.dark-mode .icon-container svg {
  opacity: 0.6;
}

html.component-icons-hidden .common-component-icons {
  display: none;
}

.component-icon {
  background-color: rgba(255,255,255,0.8);
}

html.dark-mode .component-icon {
  background-color: rgba(0,0,0,0.5);
}

@plugin "daisyui/theme" {
  name: "sunset";
  default: false;
  prefersdark: false;
  color-scheme: "dark";
  --color-base-100: oklch(22% 0.019 237.69);
  --color-base-200: oklch(20% 0.019 237.69);
  --color-base-300: oklch(18% 0.019 237.69);
  --color-base-content: oklch(77.383% 0.043 245.096);
  --color-primary: oklch(74.703% 0.158 39.947);
  --color-primary-content: oklch(14.94% 0.031 39.947);
  --color-secondary: oklch(72.537% 0.177 2.72);
  --color-secondary-content: oklch(14.507% 0.035 2.72);
  --color-accent: oklch(71.294% 0.166 299.844);
  --color-accent-content: oklch(14.258% 0.033 299.844);
  --color-neutral: oklch(26% 0.019 237.69);
  --color-neutral-content: oklch(70% 0.019 237.69);
  --color-info: oklch(85.559% 0.085 206.015);
  --color-info-content: oklch(17.111% 0.017 206.015);
  --color-success: oklch(85.56% 0.085 144.778);
  --color-success-content: oklch(17.112% 0.017 144.778);
  --color-warning: oklch(85.569% 0.084 74.427);
  --color-warning-content: oklch(17.113% 0.016 74.427);
  --color-error: oklch(85.511% 0.078 16.886);
  --color-error-content: oklch(17.102% 0.015 16.886);
  --radius-selector: 1rem;
  --radius-field: 0.5rem;
  --radius-box: 1rem;
  --size-selector: 0.25rem;
  --size-field: 0.25rem;
  --border: 1px;
  --depth: 0;
  --noise: 0;
}


@plugin "daisyui/theme" {
  name: "valentine";
  default: false;
  prefersdark: false;
  color-scheme: "light";
  --color-base-100: oklch(97% 0.014 343.198);
  --color-base-200: oklch(94% 0.028 342.258);
  --color-base-300: oklch(89% 0.061 343.231);
  --color-base-content: oklch(52% 0.223 3.958);
  --color-primary: oklch(65% 0.241 354.308);
  --color-primary-content: oklch(100% 0 0);
  --color-secondary: oklch(62% 0.265 303.9);
  --color-secondary-content: oklch(97% 0.014 308.299);
  --color-accent: oklch(82% 0.111 230.318);
  --color-accent-content: oklch(39% 0.09 240.876);
  --color-neutral: oklch(40% 0.153 2.432);
  --color-neutral-content: oklch(89% 0.061 343.231);
  --color-info: oklch(86% 0.127 207.078);
  --color-info-content: oklch(44% 0.11 240.79);
  --color-success: oklch(84% 0.143 164.978);
  --color-success-content: oklch(43% 0.095 166.913);
  --color-warning: oklch(75% 0.183 55.934);
  --color-warning-content: oklch(26% 0.079 36.259);
  --color-error: oklch(63% 0.237 25.331);
  --color-error-content: oklch(97% 0.013 17.38);
  --radius-selector: 1rem;
  --radius-field: 2rem;
  --radius-box: 1rem;
  --size-selector: 0.25rem;
  --size-field: 0.25rem;
  --border: 1px;
  --depth: 0;
  --noise: 0;
}


@plugin "daisyui/theme" {
  name: "black";
  default: false;
  prefersdark: false;
  color-scheme: "dark";
  --color-base-100: oklch(0% 0 0);
  --color-base-200: oklch(19% 0 0);
  --color-base-300: oklch(22% 0 0);
  --color-base-content: oklch(87.609% 0 0);
  --color-primary: oklch(35% 0 0);
  --color-primary-content: oklch(100% 0 0);
  --color-secondary: oklch(35% 0 0);
  --color-secondary-content: oklch(100% 0 0);
  --color-accent: oklch(35% 0 0);
  --color-accent-content: oklch(100% 0 0);
  --color-neutral: oklch(35% 0 0);
  --color-neutral-content: oklch(100% 0 0);
  --color-info: oklch(45.201% 0.313 264.052);
  --color-info-content: oklch(89.04% 0.062 264.052);
  --color-success: oklch(51.975% 0.176 142.495);
  --color-success-content: oklch(90.395% 0.035 142.495);
  --color-warning: oklch(96.798% 0.211 109.769);
  --color-warning-content: oklch(19.359% 0.042 109.769);
  --color-error: oklch(62.795% 0.257 29.233);
  --color-error-content: oklch(12.559% 0.051 29.233);
  --radius-selector: 0rem;
  --radius-field: 0rem;
  --radius-box: 0rem;
  --size-selector: 0.25rem;
  --size-field: 0.25rem;
  --border: 1px;
  --depth: 0;
  --noise: 0;
}


@plugin "daisyui/theme" {
  name: "coffee";
  default: false;
  prefersdark: false;
  color-scheme: "dark";
  --color-base-100: oklch(24% 0.023 329.708);
  --color-base-200: oklch(21% 0.021 329.708);
  --color-base-300: oklch(16% 0.019 329.708);
  --color-base-content: oklch(72.354% 0.092 79.129);
  --color-primary: oklch(71.996% 0.123 62.756);
  --color-primary-content: oklch(14.399% 0.024 62.756);
  --color-secondary: oklch(34.465% 0.029 199.194);
  --color-secondary-content: oklch(86.893% 0.005 199.194);
  --color-accent: oklch(42.621% 0.074 224.389);
  --color-accent-content: oklch(88.524% 0.014 224.389);
  --color-neutral: oklch(16.51% 0.015 326.261);
  --color-neutral-content: oklch(83.302% 0.003 326.261);
  --color-info: oklch(79.49% 0.063 184.558);
  --color-info-content: oklch(15.898% 0.012 184.558);
  --color-success: oklch(74.722% 0.072 131.116);
  --color-success-content: oklch(14.944% 0.014 131.116);
  --color-warning: oklch(88.15% 0.14 87.722);
  --color-warning-content: oklch(17.63% 0.028 87.722);
  --color-error: oklch(77.318% 0.128 31.871);
  --color-error-content: oklch(15.463% 0.025 31.871);
  --radius-selector: 1rem;
  --radius-field: 0.5rem;
  --radius-box: 1rem;
  --size-selector: 0.25rem;
  --size-field: 0.25rem;
  --border: 1px;
  --depth: 0;
  --noise: 0;
}


@plugin "daisyui/theme" {
  name: "silk";
  default: false;
  prefersdark: false;
  color-scheme: "light";
  --color-base-100: oklch(97% 0.0035 67.78);
  --color-base-200: oklch(95% 0.0081 61.42);
  --color-base-300: oklch(90% 0.0081 61.42);
  --color-base-content: oklch(40% 0.0081 61.42);
  --color-primary: oklch(23.27% 0.0249 284.3);
  --color-primary-content: oklch(94.22% 0.2505 117.44);
  --color-secondary: oklch(23.27% 0.0249 284.3);
  --color-secondary-content: oklch(73.92% 0.2135 50.94);
  --color-accent: oklch(23.27% 0.0249 284.3);
  --color-accent-content: oklch(88.92% 0.2061 189.9);
  --color-neutral: oklch(20% 0 0);
  --color-neutral-content: oklch(80% 0.0081 61.42);
  --color-info: oklch(80.39% 0.1148 241.68);
  --color-info-content: oklch(30.39% 0.1148 241.68);
  --color-success: oklch(83.92% 0.0901 136.87);
  --color-success-content: oklch(23.92% 0.0901 136.87);
  --color-warning: oklch(83.92% 0.1085 80);
  --color-warning-content: oklch(43.92% 0.1085 80);
  --color-error: oklch(75.1% 0.1814 22.37);
  --color-error-content: oklch(35.1% 0.1814 22.37);
  --radius-selector: 2rem;
  --radius-field: 0.5rem;
  --radius-box: 1rem;
  --size-selector: 0.25rem;
  --size-field: 0.25rem;
  --border: 2px;
  --depth: 1;
  --noise: 0;
}

